k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ticketing-app
  template:
    metadata:
      labels:
        app: ticketing-app
    spec:
      containers:
        - name: ticketing-app
          image: ticketing-app:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 5
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-app
spec:
  selector:
    app: ticketing-app
  ports:
    - port: 8080
      targetPort: 8080
